--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -87,12 +87,14 @@ $spacers: (
   6: 56px,
   7: 64px,
   8: 78px,
-  9: 90px
+  9: 90px,
+  10: 100px
 );
 
 $font-sizes: map-merge(
   (
     ultra-small: 11px,
+    small-more: 12.8px,
     small: 13px
   ),
   $spacers
