--- a/src/scss/modules/_divider.scss
+++ b/src/scss/modules/_divider.scss
@@ -1,6 +1,5 @@
 .divider {
-  height: 2px;
   margin: 0 0 map-get($spacers, 4);
 
-  background-color: $body-color;
+  border-color: $body-color;
 }
