--- a/src/scss/modules/_pricing-list.scss
+++ b/src/scss/modules/_pricing-list.scss
@@ -2,6 +2,6 @@
   @include flex(50px, row, null, center);
 
   @include media(mobile) {
-    @include flex(50px, column)
+    @include flex(50px, column);
   }
 }
