--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -11,8 +11,8 @@
 }
 
 .py-10 {
-  padding-top: map-get($spacers, 10);
-  padding-bottom: map-get($spacers, 10);
+  padding-top: map-get($spacers, 10) !important;
+  padding-bottom: map-get($spacers, 10) !important;
 }
 
 .limit-content {
