--- a/src/scss/modules/all.scss
+++ b/src/scss/modules/all.scss
@@ -7,7 +7,8 @@
 @import "pricing-list";
 @import "pricing-card";
 @import "news-item";
-@import "footer";
+@import "footer-full-nav";
+@import "footer-nav";
 @import "footer-col";
 @import "divider";
 @import "artist-description-buttons";
