--- a/src/scss/modules/_artist-description-buttons.scss
+++ b/src/scss/modules/_artist-description-buttons.scss
@@ -1,13 +1,6 @@
 .artist-description-buttons {
-  @include flex(map-get($spacers, 1));
-
   & > .btn {
     width: 200px;
-
-    text-align: start;
-  }
-
-  @include media(mobile) {
-    @include flex(map-get($spacers, 2), column);
+    height: 62px;
   }
 }
