--- a/src/scss/modules/_buttons.scss
+++ b/src/scss/modules/_buttons.scss
@@ -31,6 +31,9 @@
   &-icon {
     padding: 20px 30px 20px (30px + 20px + 16px);
 
+    font-size: map-get($font-sizes, small-more);
+    text-align: start;
+
     background-size: 20px;
     background-repeat: no-repeat;
     background-position: 30px 20px;
