artist refactor after tests 6

--- a/src/scss/modules/_discography-item.scss
+++ b/src/scss/modules/_discography-item.scss
@@ -3,6 +3,7 @@
     display: block;
     width: 250px;
     height: 250px;
+    margin-bottom: 18px;
 
     @include media(mobile) {
       width: 137px;
