--- a/src/css/app.css
+++ b/src/css/app.css
@@ -874,6 +874,7 @@ a {
 @media screen and (max-width: 610px) {
   .subscribe-form {
     grid-template-areas: "name name" "email email" "btn btn";
+    gap: 1.5rem;
   }
 }
 .subscribe-form-field {
@@ -1193,6 +1194,7 @@ a {
   display: block;
   width: 250px;
   height: 250px;
+  margin-bottom: 18px;
 }
 @media screen and (max-width: 1239.97px) {
   .discography-item-cover {
@@ -1209,7 +1211,6 @@ a {
   width: 250px;
   height: 250px;
   margin-bottom: 18px;
-  border-radius: 50%;
 }
 @media screen and (max-width: 1239.97px) {
   .similar-cover {
