--- a/src/scss/modules/_subscribe-form.scss
+++ b/src/scss/modules/_subscribe-form.scss
@@ -7,6 +7,7 @@
 
   @include media(custom, 610px) {
     grid-template-areas: "name name" "email email" "btn btn";
+    gap: 1.5rem;
   }
 
   &-field {
