--- a/src/scss/utilities/_utilities.scss
+++ b/src/scss/utilities/_utilities.scss
@@ -28,7 +28,8 @@ $utilities: (
   ),
   "mt": (
     property: margin-top,
-    values: (1: map-get($spacers, 1))
+    values: (1: map-get($spacers, 1), 5: map-get($spacers, 5)),
+    responsive: true
   ),
   "pt": (
     property: padding-top,
