--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -9,13 +9,15 @@
 @mixin flex($gap: null, $direction: null, $items: null, $content: null, $wrap: wrap) {
   display: flex;
   flex-direction: $direction;
-  justify-content: $content;
-  align-items: $items;
   flex-wrap: $wrap;
+  align-items: $items;
+  justify-content: $content;
 
-  @if ($direction == null or $direction == row) {
+  @if $direction == null or $direction == row {
     column-gap: $gap;
-  } @else {
+  }
+
+  @else {
     row-gap: $gap;
   }
 }
@@ -32,12 +34,12 @@
   color: $color;
 
   &:hover {
-    background-color: rgba($color, $bg-opacity-hover);
+    background-color: rgb($color $bg-opacity-hover);
   }
 }
 
 @mixin button-variant($color, $text, $color-hover) {
-  @if($color-hover == null) {
+  @if $color-hover == null {
     $color-hover: darken($color, 5);
   }
 
