--- a/src/scss/utilities/_api.scss
+++ b/src/scss/utilities/_api.scss
@@ -1,28 +1,28 @@
-@function getUtilityProperties($property, $type) {
+@function get-utility-props($property, $type) {
   @if type-of($property) == list {
     @if $type == name {
-      @return nth($property, 1)
+      @return nth($property, 1);
     } @else if $type == value {
-      @return nth($property, 2)
+      @return nth($property, 2);
     }
   } @else {
-    @return $property
+    @return $property;
   }
 }
 
 @mixin generate-utility($name, $property, $values, $responsive) {
   @each $value in $values {
-    .#{$name}-#{"" + getUtilityProperties($value, name)} {
-      #{$property}: getUtilityProperties($value, value) !important;
+    .#{$name}-#{"" + get-utility-props($value, name)} {
+      #{$property}: get-utility-props($value, value) !important;
     }
   }
 
   @if $responsive {
     @each $value in $values {
       @each $breakpoint, $size in $breakpoints {
-        .#{$name}-#{$breakpoint}-#{getUtilityProperties($value, name)} {
+        .#{$name}-#{$breakpoint}-#{get-utility-props($value, name)} {
           @include media($breakpoint) {
-            #{$property}: getUtilityProperties($value, value) !important;
+            #{$property}: get-utility-props($value, value) !important;
           }
         }
       }
@@ -32,9 +32,9 @@
 
 @each $utility-name, $settings in $utilities {
   @include generate-utility(
-      $utility-name,
-      map-get($settings, property),
-      map-get($settings, values),
-      map-get($settings, responsive)
-  )
+    $utility-name,
+    map-get($settings, property),
+    map-get($settings, values),
+    map-get($settings, responsive)
+  );
 }
