--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -34,7 +34,7 @@
   color: $color;
 
   &:hover {
-    background-color: rgb($color $bg-opacity-hover);
+    background-color: rgb($color, $bg-opacity-hover);
   }
 }
 
